@@ -1,5 +1,6 @@
 package com.devnotfound.talenthub.config;
 
+import com.auth0.jwt.interfaces.DecodedJWT;
 import com.devnotfound.talenthub.service.TokenService;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
@@ -7,12 +8,13 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
 public class JwtFilter extends OncePerRequestFilter {
@@ -21,15 +23,24 @@ public class JwtFilter extends OncePerRequestFilter {
     private TokenService tokenService;
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException {
-        String path = request.getRequestURI();
+    protected void doFilterInternal(HttpServletRequest request,
+                                    HttpServletResponse response,
+                                    FilterChain filterChain) throws ServletException, IOException {
 
+        String path = request.getRequestURI();
+        String method = request.getMethod();
+
+        // rotas públicas
         if (path.equals("/auth/gerarToken")
-        || path.startsWith("/swagger-ui")
-        || path.startsWith("/v2/api-docs")
-        || path.startsWith("/v3/api-docs")
-        || path.equals("/swagger-resources")
-        || path.equals("webjars")) {
+                || (path.equals("/api/clientes") && "POST".equalsIgnoreCase(method))
+                || path.equals("/api/clientes/login")
+                || path.equals("/api/clientes/reset-senha")
+                || path.startsWith("/swagger-ui")
+                || path.startsWith("/v2/api-docs")
+                || path.startsWith("/v3/api-docs")
+                || path.startsWith("/swagger-resources")
+                || path.startsWith("/webjars")) {
+
             filterChain.doFilter(request, response);
             return;
         }
@@ -37,20 +48,31 @@ public class JwtFilter extends OncePerRequestFilter {
         String authorizationHeader = request.getHeader("Authorization");
 
         if (authorizationHeader != null && authorizationHeader.startsWith("Bearer ")) {
-            // pegar o que vier depois da palavra Bearer
-            // substring = recortar a string, no caso do 7 em diante
+
             String token = authorizationHeader.substring(7);
 
             try {
-                var jwtValidador = tokenService.verificarToken(token);
+                DecodedJWT jwt = tokenService.verificarToken(token);
 
-                String email = jwtValidador.getSubject();
+                String email = jwt.getSubject();
+                String role = jwt.getClaim("role").asString(); // <- claim do TokenService
 
-                UsernamePasswordAuthenticationToken auth = new UsernamePasswordAuthenticationToken(token, null, Collections.emptyList());
+                if (role == null || role.isBlank()) {
+                    response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                    response.getWriter().write("Token sem role");
+                    return;
+                }
+
+                var authorities = List.of(new SimpleGrantedAuthority("ROLE_" + role));
+
+                UsernamePasswordAuthenticationToken auth =
+                        new UsernamePasswordAuthenticationToken(email, null, authorities);
+
                 SecurityContextHolder.getContext().setAuthentication(auth);
+
             } catch (Exception e) {
                 response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
-                response.getWriter().write("Token invalido");
+                response.getWriter().write("Token inválido!");
                 return;
             }
         }
